--- a/Components/Reusable/UserInfo.razor
+++ b/Components/Reusable/UserInfo.razor
@@ -1,8 +1,14 @@
 ﻿<div class="container">
-	<img src="@AvatarSource" alt="Avatar" />
-	<h3>@Name</h3>
-	<h3>@Status</h3>
+	<div class="avatar-container">
+		<img src="@AvatarSource" alt="Avatar" />
+	</div>
+	<div class="user-info-container">
+		<h3>@Name</h3>
+		<h3>@Status</h3>
+	</div>
 </div>
+
+<hr />
 
 @code {
 	[Parameter]
