--- a/Components/Reusable/FriendCard.razor
+++ b/Components/Reusable/FriendCard.razor
@@ -1,14 +1,14 @@
 ﻿@inject SteamService SteamService
 
-<div class="card h-100">
+<div class="card h-100 border-black border-5" style="background-color: rgb(42, 46, 54);">
 	<img class="card-img-top" src="@AvatarSource" alt="Avatar" />
-	<div class="card-body">
+	<div class="card-body" style="color: white">
 		<h5 class="card-title">@Name</h5>
 		<span class="card-subtitle">@Status</span>
 	</div>
 	<div class="card-footer">
-		<button class="btn btn-primary" type="button" @onclick="OnCompareClick">Compare</button>
-		<a class="btn btn-primary" href="@ProfileUrl" target="_blank" rel="noopener noreferrer">View Profile</a>
+		<button class="btn btn-dark py-1" type="button" @onclick="OnCompareClick">Compare</button>
+		<a class="btn btn-dark" href="@ProfileUrl" target="_blank" rel="noopener noreferrer">View Profile</a>
 	</div>
 </div>
 
