Changed friends list display from grid to flexbox.

--- a/Components/Layout/MainLayout.razor.css
+++ b/Components/Layout/MainLayout.razor.css
@@ -13,7 +13,7 @@ main {
     /*    background: linear-gradient(90deg,rgba(4, 4, 31, 1) 0%, rgba(0, 56, 87, 1) 75%, rgba(53, 82, 133, 1) 100%);*/
     /*    background-color: black;*/
     /*    background: linear-gradient(180deg, #1b2838 0%, #171a21 100%);*/
-    background: #171d25;
+    background: #000;
 }
 
 .top-row {
