--- a/Components/Reusable/UserInfo.razor.css
+++ b/Components/Reusable/UserInfo.razor.css
@@ -3,7 +3,7 @@
     justify-content: left;
     /*    border: solid 1px black;*/
     /*    background: linear-gradient(180deg, #1b2838 0%, #171a21 100%);*/
-    background-color: rgb(20, 23, 26);
+    background-color: #1F232E;
 }
 
 .avatar-container {
