--- a/Components/Reusable/FriendCard.razor.css
+++ b/Components/Reusable/FriendCard.razor.css
@@ -1,3 +1,19 @@
-﻿.btn {
+﻿.card {
+    width: 12rem;
+    height: auto;
+    color: white;
+}
+
+.card:hover {
+    /* Slightly scales up the card for a zoom effect */
+    transform: scale(1.03);
+    border: solid 1px white;
+}
+
+img {
+    max-height: auto;
+}
+
+.btn {
     width: 100%;
 }
