--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -1,6 +1,6 @@
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    background-color: rgb(42, 46, 54);
+    background-color: #161821;
     /*    background-color: var(--gradient-background);
     --gradient-right: rgba(70, 106, 128, 0.233);
     --gradient-left: rgba(86, 120, 134, 0.37);
