--- a/Components/Reusable/UserInfo.razor
+++ b/Components/Reusable/UserInfo.razor
@@ -1,8 +1,6 @@
-﻿<div class="container">
-	<div class="avatar-container">
-		<img src="@AvatarSource" alt="Avatar" />
-	</div>
-	<div class="user-info-container">
+﻿<div class="container d-flex flex-row flex-wrap gap-4">
+	<img src="@AvatarSource" alt="Avatar" />
+	<div class="d-flex flex-column justify-content-center gap-3">
 		<h3>@Name</h3>
 		<h3>@Status</h3>
 	</div>
