--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -50,7 +50,7 @@
 		<div class="d-flex flex-row flex-wrap justify-content-evenly m-auto gap-3">
 			@foreach (PlayerSummary p in friendSummaries)
 			{
-				<FriendCard AvatarSource="@p.AvatarFull" Name="@p.PersonaName" Status="@status[p.PersonaState]" ProfileUrl="@p.ProfileUrl" SteamId="@p.SteamId" OnCompareCallback="GetFriendsOwnedGames"></FriendCard>	
+				<FriendCard AvatarSource="@p.AvatarFull" Name="@p.PersonaName" Status="@status[p.PersonaState]" Visiblity="@visibility[p.ProfileVisibility]" ProfileUrl="@p.ProfileUrl" SteamId="@p.SteamId" OnCompareCallback="GetFriendsOwnedGames"></FriendCard>	
 			}
 		</div>
 	</div>
@@ -72,6 +72,12 @@
 		{ 4, "Snooze" },
 		{ 5, "Looking to trade" },
 		{ 6, "Looking to play" }
+	};
+
+	Dictionary<int, string> visibility = new Dictionary<int, string>()
+	{
+		{ 1, "Private Profile" },
+		{ 3, "Public Profile" }
 	};
 
 	PlayerSummary? player;
